fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.stderr
error: custom attribute panicked
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.rs
  |
  | / #[indexer(
  | |     manifest = "fuel-indexer-tests/assets/macros/simple_wasm.yaml"
  | | )]
  | |__^
  |
  = help: message: Manifest at 'fuel-indexer-tests/assets/macros/simple_wasm.yaml' does not exist

error[E0601]: `main` function not found in crate `$CRATE`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.rs
  |
  | }
  |  ^ consider adding a `main` function to `$WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.rs`
